--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./api/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon -e js,json,graphql ./api/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:json": "npx json-server --watch api/data/dados.json"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
   },
   "homepage": "https://github.com/alura-cursos/1922-graphql#readme",
   "dependencies": {
+    "apollo-server": "^2.24.1",
+    "graphql": "^15.5.0",
+    "graphql-tools": "^7.0.5",
     "json-server": "^0.16.1",
     "nodemon": "^2.0.4"
   }
